--- a/roles/server_centos/tasks/main.yml
+++ b/roles/server_centos/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Nagios on CentOS 
-  yum:
+- name: Install Nagios on CentOS using dnf
+  dnf:
     name: nagios
     state: present
